<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <ImageView android:layout_height="wrap_content" 
        android:id="@+id/IconImage" 
        android:src="@drawable/icon" 
        android:layout_gravity="center_horizontal" 
        android:layout_width="fill_parent" android:layout_marginTop="40dp">
    </ImageView>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/UserNameLayout" android:orientation="vertical" android:layout_width="fill_parent" android:layout_marginTop="20dp">
        <TextView android:layout_height="wrap_content" 
            android:layout_width="wrap_content" 
            android:text="@string/usernameprompt" android:layout_gravity="left" android:textSize="16sp" android:inputType="none" android:paddingTop="16dp" android:paddingBottom="5dp" android:paddingLeft="5dp" android:id="@+id/UsernamePrompt">
        </TextView>
        
    
<EditText android:layout_height="wrap_content" android:id="@+id/UserName" android:inputType="textEmailAddress" android:layout_width="fill_parent" android:textSize="12sp" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_marginLeft="5dp" android:layout_marginRight="5dp"></EditText>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="left" android:text="@string/passwordprompt" android:textSize="16sp" android:paddingTop="16dp" android:paddingLeft="5dp" android:id="@+id/PasswordPrompt" android:paddingBottom="5dp"></TextView>
<EditText android:layout_height="wrap_content" android:id="@+id/Password" android:textSize="12sp" android:layout_width="fill_parent" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:layout_marginBottom="20dp" android:inputType="textPassword"></EditText>
</LinearLayout>

<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/SignIn" android:text="@string/SignInPrompt" android:layout_gravity="right" android:layout_marginRight="16dp" android:layout_marginTop="36dp" android:onClick="onSignInClick"></Button>
</LinearLayout>
