<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <TextView   android:text="@string/UploadTitle" 
                android:layout_width="fill_parent" 
                android:padding="10dp" 
                android:inputType="none" 
                android:id="@+id/txtUploadPrompt" 
                android:layout_height="wrap_content" 
                android:textSize="16sp">
    </TextView>
    
    <LinearLayout   android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:id="@+id/LinLayoutUploadProgressContainer" 
                    android:orientation="vertical">
        <LinearLayout   android:layout_width="wrap_content" 
                        android:layout_height="wrap_content" 
                        android:id="@+id/LinLayoutUploadProgress1" 
                        android:orientation="horizontal">
	        <ImageView android:layout_width="32dp" 
	                   android:layout_height="32dp" 
	                   android:id="@+id/imgUpload1" 
	                   android:visibility="invisible" 
	                   android:paddingLeft="10dp" 
	                   android:paddingRight="10dp">
	        </ImageView>
	        <ProgressBar    android:id="@+id/ProgressBar01" 
	                        android:layout_width="150dp" 
                            android:progressDrawable="@android:drawable/progress_horizontal"	                        android:max="100"
	                        android:padding="2dp"
	                        android:layout_height="20dp" 
	                        android:layout_gravity="right|center_vertical" 
                            android:indeterminate="false"
                            android:indeterminateOnly="false"
	                        android:visibility="invisible">
	        </ProgressBar>    
	        <ImageButton    android:id="@+id/btnCancel1"
	                        android:onClick="onCancelClick"
	                        android:layout_width="wrap_content" 
	                        android:layout_height="wrap_content" 
	                        android:layout_gravity="right|center_vertical" 
	                        android:paddingLeft="10dp" 
	                        android:paddingRight="10dp"
	                        android:visibility="invisible">
	        </ImageButton>        
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout   android:id="@+id/LinLayoutAction" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
        <LinearLayout   android:id="@+id/LinLayoutChooseMedia" 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
	        <ImageButton    android:layout_height="wrap_content" 
	                        android:onClick="onUploadClick" 
	                        android:layout_gravity="center_horizontal" 
	                        android:id="@+id/UploadMedia" 
	                        android:layout_width="wrap_content" 
	                        android:src="@drawable/icon" 
	                        android:layout_margin="36dp">
	        </ImageButton>
		    <TextView   android:text="@string/ChooseMediaPrompt" 
		                android:layout_width="wrap_content" 
                        android:layout_gravity="center_horizontal"
                        android:padding="10dp" 
		                android:inputType="none" 
		                android:id="@+id/txtChooseMediaPrompt" 
		                android:layout_height="wrap_content" 
		                android:textSize="12sp">
		    </TextView>
        </LinearLayout>
        <LinearLayout   android:id="@+id/LinLayoutTakePicture" 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
	        <ImageButton    android:layout_height="wrap_content" 
	                        android:onClick="onCameraClick" 
	                        android:layout_gravity="center_horizontal" 
	                        android:id="@+id/UploadCamera" 
	                        android:layout_width="wrap_content" 
	                        android:src="@drawable/icon" 
	                        android:layout_margin="36dp">
	        </ImageButton>
            <TextView   android:text="@string/TakePicturePrompt" 
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal" 
                        android:padding="10dp" 
                        android:inputType="none" 
                        android:id="@+id/txtTakePicturePrompt" 
                        android:layout_height="wrap_content" 
                        android:textSize="12sp">
            </TextView>
        </LinearLayout>
</LinearLayout>




</LinearLayout>
